AC_INIT([xbfuse], [1.0], [mike@multimedia.cx])
AM_INIT_AUTOMAKE([1.11 foreign])
AC_CONFIG_HEADER([src/config.h])

AC_PROG_CC
#AC_PROG_LIBTOOL

CPPFLAGS="$CPPFLAGS -Wall `getconf LFS_CFLAGS`"
LDFLAGS="$LDFLAGS `getconf LFS_LDFLAGS`"

PKG_CHECK_MODULES([FUSE], [fuse >= 2.5])

AC_HEADER_STDC

AC_C_CONST

AC_FUNC_MALLOC
AC_FUNC_STAT

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
